--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
     <% @portfolio_items.each do |portfolio_item| %>
-        <%= image_tag portfolio_item.thumb_image%>
+        <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image?%>
         <p><%=portfolio_item.title%></p>
         <p><%=portfolio_item.subtitle%></p>
         <p><%=portfolio_item.body%></p>
