--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,10 +1,13 @@
 <h1> Portfolio Items </h1>
 
+<%= link_to "Create New Item", new_portfolio_path %>
+
 <ul>
     <% @portfolio_items.each do |portfolio_item| %>
         <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image?%>
         <p><%=portfolio_item.title%></p>
         <p><%=portfolio_item.subtitle%></p>
         <p><%=portfolio_item.body%></p>
+        <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
     <%end%>
 </ul>
