--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,10 +4,15 @@
 
 <ul>
     <% @portfolio_items.each do |portfolio_item| %>
-        <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image?%>
-        <p><%=link_to portfolio_item.title, portfolio_path(portfolio_item.id)%></p>
-        <p><%=portfolio_item.subtitle%></p>
-        <p><%=portfolio_item.body%></p>
-        <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
+        <li>
+            <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image?%>
+            <p><%=link_to portfolio_item.title, portfolio_path(portfolio_item)%></p>
+            <p><%=portfolio_item.subtitle%></p>
+            <p><%=portfolio_item.body%></p>
+            <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+            <%= link_to "Delete Portfolio", portfolio_path(portfolio_item), data: {
+                turbo_method: :delete,
+                turbo_confirm: "Are you sure?"} %>
+        </li>
     <%end%>
 </ul>
