--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,7 +6,7 @@
     <% @portfolio_items.each do |portfolio_item| %>
         <li>
             <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image?%>
-            <p><%=link_to portfolio_item.title, portfolio_path(portfolio_item)%></p>
+            <p><%=link_to portfolio_item.title, portfolio_show_path(portfolio_item)%></p>
             <p><%=portfolio_item.subtitle%></p>
             <p><%=portfolio_item.body%></p>
             <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
