--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,13 +2,32 @@
 
 <h1>Blogs</h1>
 
-<div id="blogs">
-  <% @blogs.each do |blog| %>
-    <%= render blog %>
-    <p>
-      <%= link_to "Show this blog", blog %>
-    </p>
-  <% end %>
-</div>
+<table id="blogs">
+  <thead>
+    <th>Title</th>
+    <th>Body</th>
+    <th>Status</th>
+    <th></th>
+  </thead>
+
+  <tbody>
+    <% @blogs.each do |blog| %>
+      <tr>
+        <td>
+          <%= blog.title %>
+        </td>
+        <td>
+          <%= blog.body %>
+        </td>
+        <td>
+          <%= link_to blog.status, toggle_status_blog_path(blog) %>
+        </td>
+        <td>
+          <%= link_to "Show this blog", blog %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to "New blog", new_blog_path %>
