--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,5 +4,12 @@
 <h1><%=@portfolio_item.title%></h1>
 <em><%=@portfolio_item.subtitle%></em>
 <p><%=@portfolio_item.body%></p>
+<h3>Technologies Used:</h3>
+<ul>
+<% @portfolio_item.technologies.each do |tech| %>
+    <li><%= tech.name %></li>
+<% end %>
+</ul>
+
 <%= link_to "Edit", edit_portfolio_path(@portfolio_item.id) %>
 <%= link_to "Back", portfolios_path %>
