Add portfolios link to nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
       <ul>
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Blogs", blogs_path %></li>
+        <li><%= link_to "Portfolios", portfolios_path %></li>
         <li><%= link_to "About me", about_me_path %></li>
         <li><%= link_to "Contact", contact_path %></li>
       </ul>
