--- a/app/views/layouts/portfolios.html.erb
+++ b/app/views/layouts/portfolios.html.erb
@@ -16,6 +16,8 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <%= render "shared/nav" %>
+
     <% if current_user.is_a?(User) %>
       <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete} %>
     <%else%>
@@ -23,16 +25,6 @@
       <%= link_to "Login", new_user_session_path %>
     <%end%>
     <%= yield %>
-
-    <nav>
-      <ul>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Blogs", blogs_path %></li>
-        <li><%= link_to "Portfolios", portfolios_path %></li>
-        <li><%= link_to "About me", about_me_path %></li>
-        <li><%= link_to "Contact", contact_path %></li>
-      </ul>
-    </nav>
 
     <% if session[:source] %>
       <p>Thank you for visiting us from <%=session[:source]%></p>
