Add position param to nav bar partial

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav>
+<nav class="<%= position %>">
     <ul>
     <li><%= link_to "Home", root_path %></li>
     <li><%= link_to "Blogs", blogs_path %></li>
