--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -24,7 +24,7 @@
     <%end%>
     <%= yield %>
 
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", position: 'bottom' %>
 
     <% if session[:source] %>
       <p>Thank you for visiting us from <%=session[:source]%></p>
