--- a/app/views/layouts/portfolios.html.erb
+++ b/app/views/layouts/portfolios.html.erb
@@ -16,7 +16,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", position: 'top' %>
 
     <% if current_user.is_a?(User) %>
       <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete} %>
