--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,32 +1,3 @@
 <h1>Create a new Portfolio item</h1>
 
-<%= form_with(model: @portfolio_item) do |form| %>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
-  <div>
-    <%= form.label :subtitle, style: "display: block" %>
-    <%= form.text_field :subtitle %>
-  </div>
-
-  <div>
-    <%= form.label :body, style: "display: block" %>
-    <%= form.text_area :body %>
-  </div>
-
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
-<%= link_to "Back", portfolios_path %>
+<%= render 'form',  portfolio_item: @portfolio_item %>
