--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,6 @@
     <%= login_helper%>
     <%= yield %>
 
-    <% if session[:source] %>
-      <p>Thank you for visiting us from <%=session[:source]%></p>
-    <%end%>
+    <%= source_helper %>
   </body>
 </html>
