Add auto partial render collections

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,16 +3,5 @@
 <%= link_to "Create New Item", new_portfolio_path %>
 
 <ul>
-    <% @portfolio_items.each do |portfolio_item| %>
-        <li>
-            <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image?%>
-            <p><%=link_to portfolio_item.title, portfolio_show_path(portfolio_item)%></p>
-            <p><%=portfolio_item.subtitle%></p>
-            <p><%=portfolio_item.body%></p>
-            <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-            <%= link_to "Delete Portfolio", portfolio_path(portfolio_item), data: {
-                turbo_method: :delete,
-                turbo_confirm: "Are you sure?"} %>
-        </li>
-    <%end%>
+    <%= render partial: 'portfolio_item', collection: @portfolio_items %>
 </ul>
