--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -11,22 +11,7 @@
   </thead>
 
   <tbody>
-    <% @blogs.each do |blog| %>
-      <tr>
-        <td>
-          <%= blog.title %>
-        </td>
-        <td>
-          <%= blog.body %>
-        </td>
-        <td>
-          <%= link_to blog.status, toggle_status_blog_path(blog) %>
-        </td>
-        <td>
-          <%= link_to "Show this blog", blog %>
-        </td>
-      </tr>
-    <% end %>
+    <%= render @blogs%>
   </tbody>
 </table>
 
