Add role validation to edit and delete

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -8,7 +8,7 @@
     <th>Date</th>
     <th>Body</th>
     <th>Status</th>
-    <th></th>
+    <th colspan="4"></th>
   </thead>
 
   <tbody>
@@ -16,4 +16,4 @@
   </tbody>
 </table>
 
-<%= link_to "New blog", new_blog_path %>
+<%= link_to "New blog", new_blog_path if logged_in?(:site_admin) %>
