--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -4,4 +4,8 @@
     <td><%= blog.body %></td>
     <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
     <td><%= link_to "Show this blog", blog %></td>
+    <td><%= link_to "Edit this blog", edit_blog_path(blog) if logged_in?(:site_admin) %></td>
+    <td><%= link_to "Destroy this blog", blog_path(blog), data: {
+        turbo_method: :delete,
+        turbo_confirm: "Are you sure?"} if logged_in?(:site_admin) %></td>
 </tr>
