--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <div>
-  <%= link_to "Edit this blog", edit_blog_path(@blog) %> |
+  <%= link_to "Edit this blog", edit_blog_path(@blog) if logged_in?(:site_admin) %>
   <%= link_to "Back to blogs", blogs_path %>
 
-  <%= button_to "Destroy this blog", @blog, method: :delete %>
+  <%= button_to "Destroy this blog", @blog, method: :delete if logged_in?(:site_admin) %>
 </div>
