Add role validation to edit and delete to porfolios

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -11,5 +11,5 @@
 <% end %>
 </ul>
 
-<%= link_to "Edit", edit_portfolio_path(@portfolio_item.id) %>
+<%= link_to "Edit", edit_portfolio_path(@portfolio_item.id) if logged_in?(:site_admin) %>
 <%= link_to "Back", portfolios_path %>
