--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -3,8 +3,8 @@
     <p><%=link_to portfolio_item.title, portfolio_show_path(portfolio_item)%></p>
     <p><%=portfolio_item.subtitle%></p>
     <p><%=portfolio_item.body%></p>
-    <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+    <%= link_to "Edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %>
     <%= link_to "Delete Portfolio", portfolio_path(portfolio_item), data: {
         turbo_method: :delete,
-        turbo_confirm: "Are you sure?"} %>
+        turbo_confirm: "Are you sure?"} if logged_in?(:site_admin) %>
 </li>
