--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,6 +1,6 @@
 <h1> Angular Portfolio Items </h1>
 
-<%= link_to "Create New Item", new_portfolio_path %>
+<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
 
 <ul>
     <% @angular_items.each do |angular_item| %>
