--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="inner cover">
+    <h1 class="cover-heading">About me</h1>
+    <p class="lead">
+        Full Stack Software Engineer with over 8 years of experience. Creating, maintaining, and delivering user-centric applications and solutions. I strive to keep my code transparent, easy to understand, and efficient. I have been responsible for overseeing technical initiatives, mentoring other developers, and handling complex projects.
+    </p>
+</div>
