Remove login helper from application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
       <div class="site-wrapper-inner">
         <div class="cover-container">
           <%= render "shared/application_nav" %>
-          <%= login_helper%>
           <%= yield %>
+          <%= render "shared/application_footer" %>
           <%= source_helper %>
         </div>
       </div>
