Add contact page and embedded map

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Would you like to work together?</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Email</h3>
+
+    <p><a href="mailto:sebaslh12@gmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
+  </div>
+    <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23953.07236736333!2d146.23850699766916!3d-41.37117231329502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xaa7a4f24058312f7%3A0x403c94dd0ddf1a0!2sNowhere%20Else%20Tasm%C3%A2nia%207306%2C%20Austr%C3%A1lia!5e0!3m2!1spt-PT!2spt!4v1736530795761!5m2!1spt-PT!2spt" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</div>
+
+
+
