--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,11 +1,16 @@
-<tr>
-    <td><%= blog.title %></td>
-    <td>Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</td>
-    <td><%= blog.body %></td>
-    <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
-    <td><%= link_to "Show this blog", blog %></td>
-    <td><%= link_to "Edit this blog", edit_blog_path(blog) if logged_in?(:site_admin) %></td>
-    <td><%= link_to "Destroy this blog", blog_path(blog), data: {
+<div class="blog-post">
+  <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
+  <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
+  <% if logged_in?(:site_admin) %>
+    <p class="blog-post-meta">
+    <%= link_to blog.status, toggle_status_blog_path(blog) %> /
+    <%= link_to 'Edit', edit_blog_path(blog) %> /
+    <%= link_to "Delete Post", blog_path(blog), data: {
         turbo_method: :delete,
-        turbo_confirm: "Are you sure?"} if logged_in?(:site_admin) %></td>
-</tr>
+        turbo_confirm: "Are you sure?"} if logged_in?(:site_admin) %>
+    </p>
+  <% end %>
+  <p>
+    <%= blog.body %>
+  </p>
+</div>
