--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,10 +1,8 @@
-<h1>Editing blog</h1>
+<div class="col-sm-8 blog-main">
 
-<%= render "form", blog: @blog %>
+  <h1>Editing Blog</h1>
 
-<br>
-
-<div>
-  <%= link_to "Show this blog", @blog %> |
-  <%= link_to "Back to blogs", blogs_path %>
+  <%= render 'form', blog: @blog %>
+  <%= link_to 'Show', @blog %> |
+  <%= link_to 'Back', blogs_path %>
 </div>
