--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,9 +1,8 @@
-<h1>New blog</h1>
 
-<%= render "form", blog: @blog %>
+<div class="col-sm-8 blog-main">
+  <h1>New Blog</h1>
 
-<br>
+  <%= render 'form', blog: @blog %>
 
-<div>
-  <%= link_to "Back to blogs", blogs_path %>
+  <%= link_to 'Back', blogs_path %>
 </div>
