--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,18 +1,8 @@
-<p style="color: green"><%= notice %></p>
+<div class="col-sm-8 blog-main">
 
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @blog.body %>
-</p>
-
-<div>
-  <%= link_to "Edit this blog", edit_blog_path(@blog) if logged_in?(:site_admin) %>
-  <%= link_to "Back to blogs", blogs_path %>
-
-  <%= button_to "Destroy this blog", @blog, method: :delete if logged_in?(:site_admin) %>
+  <h2><%= @blog.title %></h2>
+  <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
+  <p>
+    <%= @blog.body %>
+  </p>
 </div>
